Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101038

Wrong physical DPI

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.3.1, 6.4.0 Beta1
    • 6.3.0 Beta2
    • GUI: Other
    • None
    • Linux/X11
    • 27efadec22 (qt/qtbase/dev) 27efadec22 (qt/tqtc-qtbase/dev) b5422d2ad6 (qt/qtbase/6.3) b5422d2ad6 (qt/tqtc-qtbase/6.3)

      qApp->primaryScreen()->physicalDotsPerInchX()
      

      returns 96, whereas I have 158.338.

      In Qt 6.2.3 all is fine with this, you created a new bug in Qt 6.3.0.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            liaqi Liang Qi
            igor.mironchik Igor Mironchik
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes