xcb: Correctly set physical size for screen with RandR 1.5

This amends 9a4c98e55659b32db984612e6247ac193812a502.

Fixes: QTBUG-101038
Change-Id: Ie75953af475dc606b34c3e274438075f20bdd8ae
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 27efadec226cabd14f417c9f44f86557ea88ec4c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>